# hydro-solana-dex

./: .env  .gitignore  .prettierignore  Anchor.toml  Cargo.toml  Makefile  README.md  lerna.json  package-lock.json  package.json  tsconfig.json  turbo.json
.github/workflows/: anchor-build-test-PRs.yml  anchor-build-test-deploy-main.yml  anchor-build.yml  anchor-deploy.yml  audit.yml  build.yml  code-audit.yml  example-app-build.yml  kill_stale.yml  react-build.yml
.husky/: pre-commit
SDKs/: Readme.md
SDKs/hydra-math-sdk/: package.json
SDKs/hydra-ts/: package.json
SDKs/staking-sdk/: Cargo.toml  package.json
app/: package.json  prettier.config.js  tsconfig.json
app/public/: index.html  manifest.json
app/src/: App.tsx  Providers.tsx  index.tsx
docs/: how_to_wasm.md
examples/sdk/: README.md  package.json
examples/sdk-playground/: package.json
keys/tokens/: 24eLZdFBbb5EXDRiLg3tBSnt7suUc3zcj6TbiF1ComVG.json  2BHuU4AttHnqoQouQNwVLFZ5qTxiiFx8qgw82FHUdM3D.json  2DdjJb1H4beqXDhV7MKtNNEnSF8mHUuiECHWYRLMYgBd.json  2aWLMsawKrsA2b2DanagjgwR89LiMt9rHFkCbSg4gSzw.json  2ajJkESqFvjUE5RyLnepm8igxcu1n8j9iuWCCq6P4QSq.json  2fMrkSezZy2TjPDWk5UuCMZ6SuC6iB1UNBjHxysm7GWd.json  2wVtTttxAVEBhiZwmK3Bu9PYZyyiHRcwegyKCp5CFaLd.json  3BfiaHk68nAzTrVafozv4rigfDtJwFJnFUM8Uu4LMf5V.json  3JiAkLDxVhjBEwmnbbKX7C2vDsaJJPfZt8NeZaotSPc2.json  3SvqKEss179YVWDsznFDb4PpiVke7p8C91RGYvmcWLLH.json  3Z5YZwTefjDqowoFAanZNscyyGtELyyu1fdUoGr29vrw.json  3s9ssE9gg2jr6UU2KngEy4TE9PhPkSXtyPPRA14EK61J.json  3trop3itXqmT72PKB2d6pnVbNRo7afccqzWdZQgcBT51.json  4DfzE7h1FBYETmMbV75Jv2YN5uBGQtbMLTwgMNLGVZEH.json  4GHToAyvFehfLeTnabNiGa2iR3g8ST83yJavn6XXJKxm.json  4JRMLxnRULRUg4nX6D312UGriBKwpBPjxMuEAR9MFKMN.json  4LeoAcaFFU4YpXgxJ2Mrq2eRtZ2qdMUHi4Mxrh8zXPGg.json  (+82 more)
libs/: README.md
libs/math/hmm/: Cargo.toml  README.md
libs/math/hmm/benches/: hydra_math_benchmarks.rs
libs/math/hmm/proptest-regressions/: swap_calculator.txt
libs/math/hmm/src/: error.rs  math.rs  swap_calculator.rs  swap_result.rs
libs/math/hmm/tests/: hydra_math_tests.rs
libs/math/hydra-proto/: Cargo.toml  PR_83_notes 2.md  PR_83_notes.md  README.md
libs/math/hydra-proto/src/: lib.rs
libs/math/hydra-proto/src/cl_pool_pn/: cl_math_pn.rs
libs/math/hydra-proto/tests/: cpmm_cl_test.rs  cpmm_cl_test_float.rs  cpmm_cl_test_pn.rs  hmm_fees_test.rs  hmm_fees_test_float.rs  hmm_fees_test_pn.rs  pn_math_test.rs
libs/math/sandbox/natural-log/: Cargo.toml
libs/math/sandbox/natural-log/src/: lib.rs
migrations/: deploy.ts  devnet.demo.json  devnet.trader.json  devnet.ts  localnet.demo.json  localnet.ts  package.json
programs/hydra-benchmarks/: Cargo.toml  README.md
programs/hydra-benchmarks/src/: lib.rs
programs/hydra-benchmarks/src/instructions/: init_benchmark.rs  mod.rs
programs/hydra-benchmarks/src/state/: benchmark.rs  mod.rs
programs/hydra-farming/: Cargo.toml
programs/hydra-farming/src/: lib.rs
programs/hydra-liquidity-pools/: Cargo.toml
programs/hydra-liquidity-pools/src/: lib.rs
programs/hydra-liquidity-pools/src/errors/: mod.rs
programs/hydra-liquidity-pools/src/events/: deposit_ratio_incorrect.rs  liquidity_added.rs  liquidity_removed.rs  lp_tokens_issued.rs  lp_tokens_minted.rs  mod.rs  slippage_exceeded.rs  tokens_transferred.rs
programs/hydra-liquidity-pools/src/instructions/: Initialize_global_state.rs  add_first_liquidity.rs  add_liquidity.rs  initialize.rs  initialize_global_state.rs  initialize_with_first_deposit.rs  mod.rs  remove_liquidity.rs  swap.rs  swap_cpmm.rs
programs/hydra-liquidity-pools/src/state/: curve_type.rs  fees.rs  mod.rs  pool_state.rs
programs/hydra-liquidity-pools/src/utils/: fees.rs  mod.rs  pyth.rs
programs/hydra-multisig/: Cargo.toml
programs/hydra-multisig/src/: lib.rs
programs/hydra-pools/: Cargo.toml
programs/hydra-pools/src/: lib.rs
programs/hydra-pools/src/instructions/: init_pool.rs  mod.rs
programs/hydra-pools/src/state/: pool.rs
programs/hydra-staking/: Cargo.toml
programs/hydra-staking/proptest-regressions/instructions/: stake.txt
programs/hydra-staking/proptest-regressions/utils/: token.txt
programs/hydra-staking/src/: lib.rs
programs/hydra-staking/src/events/: mod.rs
programs/hydra-staking/src/instructions/: emit_price.rs  initialize.rs  mod.rs  stake.rs  unstake.rs
programs/hydra-staking/src/state/: mod.rs  pool_state.rs  state.rs
programs/hydra-staking/src/utils/: mod.rs  price.rs  token.rs
programs/hydra-vesting/: Cargo.toml
programs/hydra-vesting/src/: lib.rs
prototypes/: Cargo.toml  README.md
prototypes/python/v3_math/: v3_pool.py
prototypes/src/: lib.rs
prototypes/src/cl_pool/: cl_components.rs  cl_math.rs  mod.rs
prototypes/src/cl_pool_float/: mod.rs
prototypes/src/cl_pool_pn/: cl_components_pn.rs  hydra_math_legacy.rs  mod.rs
prototypes/tests/: cpmm_cl_test_float.rs  decimal_cl_math_test.rs  decimal_cpmm_cl_test.rs  decimal_hmm_fees_test.rs  hmm_fees_test_float.rs  hmm_fees_test_pn.rs  pn_cpmm_cl_test.rs  pn_math_test.rs
scripts/: build.sh  deploy.sh  migrate.ts  package.json  private-key.ts  process-idl.ts  regenerate.ts  remove_element.js  run-soteria.sh
sdks/: Readme.md
sdks/hydra-math-rs/: Cargo.toml  README.md  build.sh  package.json  readme.md
sdks/hydra-math-rs/proptest-regressions/: decimal.txt
sdks/hydra-math-rs/proptest-regressions/programs/liquidity_pools/: swap_calculator.txt
sdks/hydra-math-rs/src/: decimal.rs  lib.rs
sdks/hydra-math-rs/src/programs/: hydra_lp_tokens.rs  hydra_staking.rs  mod.rs
sdks/hydra-math-rs/src/programs/fees/: error.rs  fee_calculator.rs  fee_calculator_wasm.rs  fee_result.rs  mod.rs  percentage_fee.rs  volatility_adjusted_fee.rs
sdks/hydra-math-rs/src/programs/liquidity_pools/: error.rs  fees.rs  hydra_lp_tokens.rs  mod.rs  swap_calculator.rs  swap_calculator_scale.rs  swap_calculator_wasm.rs  swap_result.rs
tests/: constants.ts  hydra-protocol.ts
tools/cli/: Cargo.toml  build.rs
tools/cli/src/: main.rs
tools/cli/src/farming/: mod.rs
tools/cli/src/pools/: mod.rs
tools/cli/src/staking/: mod.rs
tools/cli/src/utils/: config.rs  mod.rs
(+391 files in other folders)
