# Keep prototypes in its own workspace
[workspace]

[package]
name = "prototypes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spl-math = { version = "0.1.0", features = ["no-entrypoint"] }
solana-program = "1.9.0"
uint = "0.9"
thiserror = "1.0.30"
num-derive = "0.3.3"
num-traits = "0.2"
ndarray = "0.15.4"
hydra-math-rs = { version = "0.1.0", path = "../sdks/hydra-math-rs", features = ["no-entrypoint"] }