[package]
name = "hydra-benchmarks"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hydra_benchmarks"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
localnet = []
devnet = []
testnet = []
mainnet = []

default = ["localnet"]

[dependencies]
anchor-lang = "0.24.2"
hydra-math-rs = { path = "../../sdks/hydra-math-rs", features = ["no-entrypoint"] }
