cargo-features = ["edition2021"]

[package]
name = "hydra-farming"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hydra_farming"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
mainnet = []
testnet = []
devnet = []
localnet = []

default = ["localnet"]

[dependencies]
#anchor-lang = { git = "https://github.com/hydraswap-io/anchor" }
anchor-lang = "0.19.0"
