[package]
name = "hydra-liquidity-pools"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hydra_liquidity_pools"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
mainnet = []
testnet = []
devnet = []
localnet = []

default = ["localnet"]

[dependencies]
anchor-lang = "0.22.1"
anchor-spl = "0.22.1"
derivative = "2.2.0"
hydra-math-rs = { path = "../../sdks/hydra-math-rs" }
num = "0.4.0"
