[package]
name = "hydra-liquidity-pools"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hydra_liquidity_pools"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
mainnet = []
testnet = []
devnet = []
localnet = []

default = ["localnet"]

[dependencies]
anchor-lang = { version = "0.23", features = ["init-if-needed"] }
anchor-spl = "0.23"
derivative = "2.2"
hydra-math-rs = { path = "../../sdks/hydra-math-rs" }
num = "0.4"
pyth-client = {version = "0.5.0", features = ["no-entrypoint"]}
