cargo-features = ["edition2021"]

[package]
name = "hydra-pools"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hydra_pools"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/hydraswap-io/anchor" }
anchor-spl = { git = "https://github.com/hydraswap-io/anchor" }
anchor-client = { git = "https://github.com/hydraswap-io/anchor" }
solana-program = "1.9.0"
hydra-math = { version = "0.1.0", path = "../../libs/math/hmm", features = ["no-entrypoint"] }
