[package]
name = "hydra-staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hydra_staking"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
mainnet = []
testnet = []
devnet = []
localnet = []

default = ["localnet"]

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
spl-math = { version = "0.1", features = ["no-entrypoint"] }
hydra-math-rs = { path="../../sdks/hydra-math-rs" }


[dev-dependencies]
proptest = { version = "1" }
