cargo-features = ["edition2021"]

[package]
name = "hydra-vesting"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hydra_vesting"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/hydraswap-io/anchor" }
anchor-spl = { git = "https://github.com/hydraswap-io/anchor" }
anchor-client = { git = "https://github.com/hydraswap-io/anchor" }
