[package]
name = "hydra-math-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no-entrypoint = []
production = []

[dependencies]
wasm-bindgen = "0.2.79"
spl-math = { git = "https://github.com/utx0/spl-math-butchered.git"}
anchor-lang = "0.18.2"
ndarray = "0.15.4"

[dev-dependencies]
proptest = { version = "1.0.0" }

[lib]
crate-type = ["cdylib", "rlib"]