[package]
name = "hydra-math-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no-entrypoint = []
production = []

[dependencies]
wasm-bindgen = "0.2.79"
ndarray = "0.15.4"
thiserror = "1.0.24"

[dev-dependencies]
proptest = { version = "1.0.0" }
hydra-math-simulator-rs = { version = "0.1.0", path = "../hydra-math-simulator-rs" }

[lib]
crate-type = ["cdylib", "rlib"]