[package]
name = "hydra-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
structopt = "0.3.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anchor-lang = "0.19.0"
anchor-client = "0.19.0"
anchor-spl = "0.19.0"
shellexpand = "2.1"
hydra-farming = { path = "../../programs/hydra-farming" }
hydra-staking = { path = "../../programs/hydra-staking" }
hydra-pools = { path = "../../programs/hydra-pools" }