[package]
name = "hydra-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
structopt = "0.3.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anchor-lang = { git = "https://github.com/hydraswap-io/anchor" }
anchor-spl = { git = "https://github.com/hydraswap-io/anchor" }
anchor-client= { git = "https://github.com/hydraswap-io/anchor" }
shellexpand = "2.1"
hydra-farming = { path = "../../programs/hydra-farming", features = ["no-entrypoint"] }
hydra-staking = { path = "../../programs/hydra-staking", features = ["no-entrypoint"] }
hydra-pools = { path = "../../programs/hydra-pools", features = ["no-entrypoint"] }
static-pubkey = "1.0.2"
dotenv = "0.15.0"
solana-program = "1.9.0"
strum = "0.23.0"
strum_macros = "0.23.1"

[build-dependencies]
dotenv = "0.15.0"
