[package]
name = "hydra-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
structopt = "0.3.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#anchor-lang = { git = "https://github.com/hydraswap-io/anchor" }
#anchor-spl = { git = "https://github.com/hydraswap-io/anchor" }
#anchor-client= { git = "https://github.com/hydraswap-io/anchor" }
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
anchor-client = "0.20.1"
shellexpand = "2.1"
hydra-farming = { path = "../../programs/hydra-farming", features = ["no-entrypoint"] }
hydra-staking = { path = "../../programs/hydra-staking", features = ["no-entrypoint"] }
hydra-liquidity-pools = { path = "../../programs/hydra-liquidity-pools", features = ["no-entrypoint"] }
static-pubkey = "1.0.2"
dotenv = "0.15.0"
solana-program = "1.9.4"
solana-cli-config = "1.9.4"
solana-clap-utils = "1.9.4"
solana-logger = "1.9.4"
clap = "2.34.0"

[build-dependencies]
dotenv = "0.15.0"
