cargo-features = ["edition2021"]

[package]
name = "hydra-math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no-entrypoint = []
production = []

[dependencies]
solana-program = "1.9.0"
spl-math = { version = "0.1.0", features = ["no-entrypoint"] }
uint = "0.9"
thiserror = "1.0.30"
num-derive = "0.3.3"
num-traits = "0.2"

[[test]]
name = "hydra_math_tests"

[dev-dependencies]
criterion = "0.3.0"
proptest = { version = "1.0.0" }
rand = { version = "0.8.4" }
sim = { path = "../sim" }

[[bench]]
name = "hydra_math_benchmarks"
harness = false
