[package]
name = "natural-log-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.9.0"
spl-math = "0.1.0"
uint = "0.9"
thiserror = "1.0.30"
num-derive = "0.3.3"
num-traits = "0.2"
